# automotor_website

./: .env.local.example  package-lock.json  package.json  tailwind.config.ts
.playwright-mcp/: page-2026-05-03T07-25-32-038Z.yml  page-2026-05-03T07-26-21-890Z.yml  page-2026-05-03T07-26-40-146Z.yml
.sisyphus/: boulder.json
.sisyphus/plans/: chat-agent.md
apps/agent/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/agent/app/: auth.py  checkpointer.py  config.py  graph.py  main.py  model.py  parts_search.py
docs/: agentplan.md  prd.md  prompt1.md  prompt10.md  prompt11.md  prompt12.md  prompt2.md  prompt3.md  prompt4.md  prompt5.md  prompt6.md  prompt7.md  prompt8.md  prompt9.md
scripts/: dev.sh
src/: middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/app/admin/: layout.tsx  page.tsx
src/app/cars/: page.tsx
src/app/commercial-parts/: page.tsx
src/app/contact/: ContactClient.tsx  page.tsx
src/app/garage/: GarageClient.tsx  page.tsx
src/app/junkyards/: JunkyardsClient.tsx  page.tsx
src/app/marine/: page.tsx
src/app/mechanics/: MechanicsClient.tsx  layout.tsx  page.tsx
src/app/referrals/: page.tsx
src/components/: AuthProvider.tsx  CategoryPage.tsx  ChatInput.tsx  ChatView.tsx  Logo.tsx  SEOPageTemplate.tsx  SavingsReceiptModal.tsx  Sidebar.tsx  StickyCallButton.tsx
src/lib/: auth.ts  conversations.ts  parts-search-prompt.ts  parts-search.ts  seo-data.ts  supabase-server.ts  supabase.ts
supabase/: schema.sql
(+55 files in other folders)
