[project]
name = "automotor-agent"
version = "0.1.0"
description = "AutoMotor.AI agent service — LangGraph + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.20",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "supabase>=2.9.0",
    "PyJWT>=2.9.0",
    "psycopg[binary,pool]>=3.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
